# amethyst-lightroom

./: .gitattributes  .gitignore  COPYING  Cargo.toml  LICENSE-MIT  imgui.ini
resources/config/: display.ron
resources/mesh/Sponza/: README.md
resources/prefab/: lightroom_0.ron  lightroom_1.ron
src/: filtered_input.rs  main.rs  prefab_data.rs
